# rudimentary-video-summarizer

./: .gitignore  README.md  audio_processing.py  main.py  misc_utils.py  pyproject.toml  requirements.txt  text_summarization.py  transcription.py  youtube_downloading.py
tests/: test_misc_utils.py  test_text_summarization.py  test_transcription.py
